--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/helmet": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "helmet": "^6.0.1"
+    "helmet": "^6.0.1",
+    "mongoose": "^6.8.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.15",
+    "@types/helmet": "^4.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
