--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,12 @@
     "@types/helmet": "^4.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.7.2",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
