--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "API for financial statement app",
   "main": "index.ts",
   "scripts": {
-    "build": "npx tsc",
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --pretty --transpile-only ./index.ts"
   },
@@ -32,6 +32,7 @@
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
