--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "API for financial statement app",
   "main": "index.ts",
   "scripts": {
-    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack",
+    "build": "tsc ./index.ts",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --pretty --transpile-only ./index.ts"
   },
