--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,5 @@
 {
   "compilerOptions": {
-    "module": "ESNext"
+    "module": "NodeNext"
   },
-  "ts-node": {
-    "compilerOptions": {
-      "module": "CommonJS"
-    }
-  }
 }
