--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^4.13.0"
   },
   "devDependencies": {
     "typescript": "^4.9.4"
