--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.9.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.16",
+    "@types/mongoose": "^5.11.97",
     "typescript": "^4.9.4"
   }
 }
