--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "scripts": {
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
-    "eslint:fix": "eslint --fix"
+    "eslint:fix": "eslint --fix",
+    "clean": "rm -rf dist node_modules package-lock.json"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
