--- a/backend/package.json
+++ b/backend/package.json
@@ -23,13 +23,13 @@
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.1"
   }
-  
 }
