--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
